Now, an student is capable of getting its list of studies

--- a/api.yaml
+++ b/api.yaml
@@ -330,6 +330,7 @@ paths:
     get:
       tags:
         - teachers
+        - students
       summary: gets the list of studies for the current teacher
       operationId: getStudies
       description: |
