Added LTI activity (not working yet)

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "kafka-node": "*",
     "get-keycloak-public-key": "*",
     "keycloak-admin": "*",
+    "ltijs": "*",
     "mongoose": "^5.7.8",
     "node-yaml-config": "0.0.3",
     "request": "*",
