--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "cookie-parser": "1.3.5",
     "express": "4.13.1",
     "express-body-schema": "github:Synpheros/express-body-schema#master",
+    "express-fileupload": "*",
+    "get-keycloak-public-key": "*",
     "html-pdf": "*",
     "jsonwebtoken": "*",
     "kafka-node": "*",
-    "get-keycloak-public-key": "*",
     "keycloak-admin": "*",
     "ltijs": "*",
     "mongoose": "^5.7.8",
+    "multiparty-express": "^0.1.9",
     "node-yaml-config": "0.0.3",
     "request": "*",
     "ssl-root-cas": "1.3.x",
